--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@ The poetic encounter between art and science creates a fuzzy dimension of new po
 <sub align="center">Convergence: Artistic Explorations from Nature to Society</sub>
 </p>
         <ul class="actions stacked">
-            <li><a href="https://zonesoundcreative.com/news/" class="button">Coming Soon</a></li>
+            <li><a href="https://docs.google.com/forms/d/e/1FAIpQLScZeKha9pxxIaXZKPyNrhG5RpG8HdPCiCE4EtTPKgGbbzX7Xg/viewform?fbclid=IwZXh0bgNhZW0CMTAAAR2iQls85TjUATrXC0aANcoS_cWfN3z58epich-XkJqp_xqmPK75QF3roUM_aem_Af9-6iXTa9M6vE3sGdADK3IEzFpP8J82DYAmyEWi5lFzU4n1APXQckOEFA3i97CDWM5tUnvVZ6n-FL4uvTHveAbN&fbzx=123271271769002557" class="button">Coming Soon</a></li>
         </ul>
     </div>
     <div class="image">
